# data_project

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
data/output/: output.xlsx
docs/: load.md  transform.md
extract/: index.html
load/: index.html
search/: search_index.json
src/: main.py
src/pipeline/: extract.py  load.py  transform.py
test/: __init__.py  test_pipeline.py
transform/: index.html
