[tool.poetry]
name = "dataproject"
version = "0.1.0"
description = "Projeto de ETL"
authors = ["daniel-henrique-calado <danielcalado94@gmail.com>"]
license = "Public"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
