[tool.poetry]
name = "dataproject"
version = "0.1.0"
description = "Projeto de ETL"
authors = ["daniel-henrique-calado <danielcalado94@gmail.com>"]
license = "Public"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
pytest = "^8.0.0"
isort = "^5.13.2"
blue = "^0.9.1"
pydocstyle = "^6.3.0"
pip-audit = "^2.7.1"
taskipy = "^1.12.2"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.8.0"
pygments = "^2.17.2"
mkdocs-material = "^9.5.10"
pymdown-extensions = "^10.7"
mkdocs-bootstrap386 = "^0.0.2"
pre-commit = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"
run = "python3 src/main.py"
